2007-02-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* configure.ac: Redirect all error logging for the non-essential
	gcc and make tests to &5 (which goes into config.log).  If they
	go wrong, the user will see 'no' in the specific feature that is
	being tested, and can into config.log to check why they failed.
	* configure: Regenerated.

2007-02-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Instance/java-tool.make: Store Java code in the standard
	GNUSTEP_JAVA location instead of a subdirectory of GNUSTEP_TOOLS.
	* java-executable.template: Corresponding update.  Simplify
	and update by sourcing GNUstep.sh.
	
2007-02-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* gnustep-config.in: Extended help to list all the new 
	filesystem variables.

2007-02-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* configure.ac (GNUSTEP_USER_DIR_LIBRARIES): Fixed definition.
	Use GNUSTEP_SYSTEM_HEADERS and GNUSTEP_SYSTEM_LIBRARIES rather
	than GNUSTEP_SYSTEM_ROOT/Library/Headers and
	GNUSTEP_SYSTEM_ROOT/Library/Libraries.
	* configure: Regenerated.

	* ld_lib_path.sh: Removed the optional argument.
	Updated to new filesystem support.
	* ld_lib_path.csh: Same changes.
	
2007-02-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* common.make (LD_LIB_PATH_SCRIPT): Unused variable removed.

2007-02-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* GNUmakefile.in (install): Fixed installation of debugapp.  It
	was installed with wrong permissions in the wrong directory
	(Reported by Fred Kiefer <fredkiefer@gmx.de>).

2007-02-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Instance/resource-set.make (RESOURCE_FILES_INSTALL_DIR): Only use
	xxx_RESOURCE_FILES_INSTALL_DIR if xxx_INSTALL_DIR is not set.  In
	this way, GNUmakefiles that need to be backwards compatible can set
	both the old and the new variable, and work both with old and
	new gnustep-makes.
	* common.make: Emit a deprecation warning is
	GNUSTEP_INSTALLATION_DIR is used.
