@@ -1,5 +1,9 @@
 2007-02-14  Nicola Pero  <nicola.pero@meta-innovation.com>
 
+	* gnustep-make.spec.in: Updated description and comments.
+
+2007-02-14  Nicola Pero  <nicola.pero@meta-innovation.com>
+
 	* configure.ac: Redirect all error logging for the non-essential
 	gcc and make tests to &5 (which goes into config.log).  If they
 	go wrong, the user will see 'no' in the specific feature that is
